// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e tests [snapshot] empty strip prefix 1`] = `
"----------------------------------------------------
modules/no-prefix/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "no-prefix",
    version = "1.0.0",
)

----------------------------------------------------
modules/no-prefix/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/no-prefix/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-dQqjftp7Dsw51+wKoZ7ylYLcU8/OAB82bEhRLVbG5oE=",
    "url": "https://github.com/testorg/no-prefix/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/no-prefix/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/no-prefix",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/no-prefix"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] error email for incorrect strip prefix 1`] = `
"TO: releaser@test.org, foo@test.org
SUBJECT: Publish to BCR

Failed to publish entry for testorg/versioned@v1.0.0 to the Bazel Central Registry.

Could not find MODULE.bazel in release archive at ./versioned-1.0.0/MODULE.bazel.
Is the strip prefix in source.template.json correct? (currently it's 'versioned-1.0.0')


"
`;

exports[`e2e tests [snapshot] error email for incorrect strip prefix in multi module repo 1`] = `
"TO: releaser@test.org, foo@test.org, moo@test.org
SUBJECT: Publish to BCR

Failed to publish entry for testorg/multi-module@v1.0.0 to the Bazel Central Registry.

Failed to download release archive from http://localhost:8001/testorg/multi-module/releases/download/v1.0.0.tar.gz. Received status 503


"
`;

exports[`e2e tests [snapshot] missing strip prefix 1`] = `
"----------------------------------------------------
modules/empty-prefix/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "empty-prefix",
    version = "1.0.0",
)

----------------------------------------------------
modules/empty-prefix/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/empty-prefix/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-3NScfj5InW4kWFD7tHN7nrHo7XirCeZwpEZmUGEumP4=",
    "strip_prefix": "",
    "url": "https://github.com/testorg/empty-prefix/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/empty-prefix/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/empty-prefix",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/empty-prefix"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] multiple modules 1`] = `
"----------------------------------------------------
modules/module/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "module",
    version = "1.0.0",
)

----------------------------------------------------
modules/module/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/module/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-GIERNCByLpef3PWA31F/50ECIeCXV3jcieI/pv1uovg=",
    "strip_prefix": "multi-module-1.0.0",
    "url": "https://github.com/testorg/multi-module/releases/download/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/module/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/multi-module",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/multi-module"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

----------------------------------------------------
modules/submodule/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "submodule",
    version = "1.0.0",
)

----------------------------------------------------
modules/submodule/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/submodule/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-GIERNCByLpef3PWA31F/50ECIeCXV3jcieI/pv1uovg=",
    "strip_prefix": "multi-module-1.0.0/submodule",
    "url": "https://github.com/testorg/multi-module/releases/download/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/submodule/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/multi-module",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        },
        {
            "name": "Moo Cow",
            "email": "moo@test.org",
            "github": "moocow"
        }
    ],
    "repository": [
        "github:testorg/multi-module"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with attestations 1`] = `
"----------------------------------------------------
modules/attestations/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "attestations",
    version = "1.0.0",
)

----------------------------------------------------
modules/attestations/1.0.0/attestations.json
----------------------------------------------------
{
    "types": [
        "https://slsa.dev/provenance/v1"
    ],
    "attestations": {
        "source.json": {
            "url": "https://github.com/testorg/attestations/releases/download/v1.0.0/source.json.intoto.jsonl",
            "integrity": "sha256-uKDY/T+tSAasJP4TVUoB8zHqM8IGh8IJaOiN/4kJUDM="
        },
        "MODULE.bazel": {
            "url": "https://github.com/testorg/attestations/releases/download/v1.0.0/MODULE.bazel.intoto.jsonl",
            "integrity": "sha256-IXNI7+fdDXNXwbhf/tYlRHWg6g0SzZLi3Va2bnDfEM0="
        },
        "attestations-v1.0.0.tar.gz.intoto.jsonl": {
            "url": "https://github.com/testorg/attestations/releases/download/v1.0.0/attestations-v1.0.0.tar.gz.intoto.jsonl",
            "integrity": "sha256-F8+mmnlCygeJk5x/E89lVtxmXvxyfzUe/vb+3cmrTGs="
        }
    }
}

----------------------------------------------------
modules/attestations/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/attestations/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-8Mp0OnyZi6oZkiRyG+7AJ6aKho6Z3FfjVdeO/j+2ZPg=",
    "strip_prefix": "attestations-1.0.0",
    "url": "https://github.com/testorg/attestations/releases/download/v1.0.0/attestations-v1.0.0.tar.gz"
}

----------------------------------------------------
modules/attestations/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/attestations",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/attestations"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with tarball release archive 1`] = `
"----------------------------------------------------
modules/tarball/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "tarball",
    version = "1.0.0",
)

----------------------------------------------------
modules/tarball/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/tarball/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-5X+xhTuA7pDj/Quebu0vy2HjbV6i9+VCtx07nvDDs2c=",
    "strip_prefix": "tarball-1.0.0",
    "url": "https://github.com/testorg/tarball/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/tarball/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/tarball",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/tarball"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with unversioned module in source 1`] = `
"----------------------------------------------------
modules/unversioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "unversioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/unversioned/1.0.0/patches/module_dot_bazel_version.patch
----------------------------------------------------
===================================================================
--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,4 @@
 module(
     name = "unversioned",
+    version = "1.0.0",
 )

----------------------------------------------------
modules/unversioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/unversioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-YsOZo9xaEOEyz4PXwg3Bh3wp+48ASs5FloVLvCEUI4s=",
    "strip_prefix": "unversioned-1.0.0",
    "url": "https://github.com/testorg/unversioned/archive/refs/tags/v1.0.0.tar.gz",
    "patches": {
        "module_dot_bazel_version.patch": "sha256-6+XCBXtNxFGKuL182vqWxZkECRxHLHSe1gd+hfpnL8A="
    },
    "patch_strip": 1
}

----------------------------------------------------
modules/unversioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/unversioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/unversioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with versioned module in source 1`] = `
"----------------------------------------------------
modules/versioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "versioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/versioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/versioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-Fro7OplVkXGdnElWFH/ZOyVL804wFRgSIGgV8nSXfZc=",
    "strip_prefix": "versioned-1.0.0",
    "url": "https://github.com/testorg/versioned/archive/refs/tags/v1.0.0.tar.gz"
}

----------------------------------------------------
modules/versioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/versioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/versioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with zero-versioned module in source 1`] = `
"----------------------------------------------------
modules/zero-versioned/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "zero-versioned",
    version = "1.0.0",
)

----------------------------------------------------
modules/zero-versioned/1.0.0/patches/module_dot_bazel_version.patch
----------------------------------------------------
===================================================================
--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,4 @@
 module(
     name = "zero-versioned",
-    version = "0.0.0",
+    version = "1.0.0",
 )

----------------------------------------------------
modules/zero-versioned/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/zero-versioned/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-YKWSPs0/a2wizrjaMcotdksAjltxqUMKj4Ut4ZquXms=",
    "strip_prefix": "zero-versioned-1.0.0",
    "url": "https://github.com/testorg/zero-versioned/archive/refs/tags/v1.0.0.tar.gz",
    "patches": {
        "module_dot_bazel_version.patch": "sha256-KpbuC1vv5mfhdTs5nnTl3/pH7Y/6JCnD1b1XLsqyOAo="
    },
    "patch_strip": 1
}

----------------------------------------------------
modules/zero-versioned/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/zero-versioned",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/zero-versioned"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;

exports[`e2e tests [snapshot] ruleset with zip release archive 1`] = `
"----------------------------------------------------
modules/zip/1.0.0/MODULE.bazel
----------------------------------------------------
module(
    name = "zip",
    version = "1.0.0",
)

----------------------------------------------------
modules/zip/1.0.0/presubmit.yml
----------------------------------------------------
bcr_test_module:
  module_path: "e2e/bzlmod"
  matrix:
    platform: ["debian10", "macos", "ubuntu2004", "windows"]
    bazel: [6.x, 7.x]
  tasks:
    run_tests:
      name: "Run test module"
      platform: \${{ platform }}
      bazel: \${{ bazel }}
      test_targets:
        - "//..."

----------------------------------------------------
modules/zip/1.0.0/source.json
----------------------------------------------------
{
    "integrity": "sha256-8u04c7Lk1psMKzFgnN3yysw93jvWp4RnqGGW/9n/+Jk=",
    "strip_prefix": "zip-1.0.0",
    "url": "https://github.com/testorg/zip/archive/refs/tags/v1.0.0.zip"
}

----------------------------------------------------
modules/zip/metadata.json
----------------------------------------------------
{
    "homepage": "https://github.com/testorg/zip",
    "maintainers": [
        {
            "name": "Foo McBar",
            "email": "foo@test.org",
            "github": "foobar"
        }
    ],
    "repository": [
        "github:testorg/zip"
    ],
    "versions": [
        "1.0.0"
    ],
    "yanked_versions": {}
}

"
`;
